<resources>
    <string name="app_name">TMC B2B Partner App</string>
    <string name="Version_No"> 1.0.2 (Beta) </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="tmc_supplier_1">TMC Supplier 1</string>
    <string name="pos_device_emulator_name">sdk_gphone_x86_arm</string>
    <string name="pos_device_name">TODO</string>
    <string name="orderid">Orderid</string>
    <string name="orderplacedtime"> Order Placed Time </string>
    <string name="tmc_deliveryCenter_1">TMC Delivery Center 1</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="stocklist">Stock List</string>
    <string name="batches">Batches</string>
    <string name="placeOrder">Place Order</string>
    <string name="CASH">CASH</string>
    <string name="CARD">CARD</string>
    <string name="UPI">UPI</string>
    <string name="CREDIT">CREDIT</string>
    <string name="change_goatGrade_details"> Change Goat Grade Details </string>
    <string name="place_Order_screen">Place Orders Screen</string>
    <string name="settings">Settings</string>
    <string name="create_new_batch">Create New Batch</string>
    <string name="click_to_create_new_batch">Click to Create New Batch</string>
    <string name="lastly_created_batch">Lastly Created Batch</string>
    <string name="batch_id">Batch No</string>
    <string name="created_date">Created Date</string>
    <string name="sent_date">Sent Date</string>
    <string name="received_date">Received Date</string>
    <string name="status">Status</string>
    <string name="view">View</string>
    <string name="Generate_Report"> Generate Report </string>
    <string name="Generate_Report_FinishBatch"> Generate Report &amp; Finish Batch </string>
    <string name="Generate_Report_CompleteBatch"> Generate Report &amp; Complete Batch </string>
    <string name="stock_and_audit_batch">Stock &amp; Audit Batch  </string>
    <string name="audit_batch"> Audit Batch  </string>
    <string name="sampleDate">Thu, 28 Oct 2022 10:45:38</string>
    <string name="sampleBatchId">00000</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="barcode_sampleData">0001</string>
    <string name="select_delivery_center">Select Delivery Center</string>
    <string name="selected_delivery_center">Selected Delivery Center</string>
    <string name="batch_supplied_by">Batch Supplied By</string>
    <string name="barcode">Barcode</string>
    <string name="total_count">Total Count</string>
    <string name="total_weight">Total weight</string>
    <string name="total_weightwitgkg">Total weight (Kg)</string>
    <string name="total_price">Total price</string>
    <string name="price_withoutDiscount"> Price  </string>
    <string name="enterDiscount_amount_value"> Enter discount Amt value </string>
    <string name="total_unscanned_item">UnScanned Items</string>
    <string name="item_count">Item Count</string>
    <string name="add_new_item_existing_batch">Add New Item in Existing Batch</string>
    <string name="switch_lost_eartag">Switch Lost Eat Tag Item</string>
    <string name="stock_batch_item">Stock Batch Item</string>
    <string name="stock_batch_item_withoutScan_allowedScan">Stock Batch Item Without Scan &amp; Allowed to Scan</string>
    <string name="stock_batch_item_withoutScan">Stock Batch Item WithOut Scan</string>
    <string name="view_stockedBatch_item">View Stocked Batch Item</string>
    <string name="view_unstockedBatch_item">View Unstocked Batch Item</string>
    <string name="close_batchAnd_MarkAs_Received">Close Batch and Mark as Received</string>
    <string name="supplier_goatItemList">SUPPLIER_LIST</string>
    <string name="deliverycenter_UnreviewedgoatItemList">DELIVERYCENTER_UNREVIEWED_LIST</string>
    <string name="deliverycenter_ReviewedgoatItemList">DELIVERYCENTER_REVIEWED_LIST</string>
    <string name="deliverycenter_SoldgoatItemList">DELIVERYCENTER_SOLD_LIST</string>
    <string name="deliverycenter_UnsoldgoatItemList">DELIVERYCENTER_UNSOLD_LIST</string>
    <string name="delivery_center_stockDetails">DELIVERY CENTER STOCK DETAILS</string>
    <string name="delivery_center_batchDetails">DELIVERY CENTER BATCH DETAILS</string>
    <string name="supplier">SUPPLIER</string>
    <string name="delivery_center">DELIVERY CENTER</string>
    <string name="view_sold_items_in_batch">View Sold Items in Batch</string>
    <string name="view_unsold_items_in_batch">View UnSold Items in Batch</string>
    <string name="edit_unsold_items_in_batch">Edit UnSold Items in Batch</string>
    <string name="view_edit_batch_item_deliveryCenter">Edit Batch Item Delivery Center</string>
    <string name="view_edit_batch_item_supplier">Edit Batch Item Supplier</string>
    <string name="add_new_item">Add New Item</string>
    <string name="edit_existing_batch">View / Edit Existing Batch</string>
    <string name="view_audit_batch_item">View /Audit Batch Item</string>
    <string name="audit_unstocked_batch_item">Audit Unstocked Batch Item</string>
    <string name="scanned_barcode">Scanned Barcode</string>
    <string name="view_edit_existing_item">View / Edit Existing Item</string>
    <string name="review_and_finish_batch">Review &amp; Finish Batch</string>
    <string name="generateReport_and_finish_batch">Generate Report &amp; Finish Batch</string>
    <string name="mark_batch_as_sold">Mark Batch as Sold</string>
    <string name="finish_batch">Finish Batch</string>
    <string name="isScannerModeTurnedOn">isScannerModeTurnedOn</string>
    <string name="called_from">CalledFrom</string>
    <string name="scanner_called_to_do">scannercalledtodo</string>
    <string name="scannerCalled_to_FetchData">scannercalledtoFetchData</string>
    <string name="scannerCalled_Not_to_FetchData">scannercalledNottoFetchData</string>
    <string name="batches_List">Batch List  </string>
    <string name="batches_readyForSale">Batches ready for sales  : </string>
    <string name="batches_on_the_way">Batches Sent by the selected Supplier : </string>
    <string name="cant_mark_batch_as_sold_instruction">Cant mark batch as Sold when batch have some  Unsold items.  </string>
    <string name="items_in_the_cart">Items Added in the Cart </string>
    <string name="items_in_the_order">Items Added in this order </string>
    <string name="delivered_items_in_the_list">Delivered Items in the list </string>
    <string name="unscanned_stocks_instruction">Items Not yet Scanned  in this batch :  </string>
    <string name="item_not_scannedinstruction">This Barcode is Not Added in this batch Yet   </string>
    <string name="choose_an_item">Choose an item</string>
    <string name="item_ctgy">Item Ctgy</string>
    <string name="currentWeight"> Current weight</string>
    <string name="currentWeight_inKg"> Current weight (Kg) </string>
    <string name="gender_type">Gender</string>
    <string name="grade_Name">Grade Name</string>
    <string name="breed_type">Breed Type</string>
    <string name="FEMALE_WITH_BABY">FEMALE WITH BABY</string>
    <string name="FEMALE">FEMALE</string>
    <string name="MALE">MALE</string>
    <string name="MALEQUANTITY">Male Quantity</string>
    <string name="MALEWEIGHT">Male weight</string>
    <string name="FEMALEQUANTITY">Female Quantity</string>
    <string name="FEMALEWEIGHT">Female weight</string>
    <string name="TOTALQUANTITY">total Quantity</string>
    <string name="TOTALWEIGHT">total weight</string>
    <string name="scan">Scan</string>
    <string name="retailermobileno"> Buyer Mobile No </string>
    <string name="retailername"> Buyer Name </string>
    <string name="discount"> discount Value </string>
    <string name="feedvalue"> Feed Value </string>
    <string name="priceperkg"> price Per Kg </string>
    <string-array name="paymentmode">
        <item>CASH</item>
        <item>CARD</item>
        <item>CHEQUE</item>
        <item>UPI</item>
    </string-array>
    <string name="payableamount">Payable Amount</string>
    <string name="placedtime">Placed Time</string>
    <string name="retailername_priceperkg">Buyer and price Per Kg </string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="search_edit_barcode">Scan &amp; Edit Item</string>
    <string name="search_view_barcode">Scan &amp; View Item</string>
    <string name="search_view_barcode_secondVersn">Search &amp; View Item</string>
    <string name="final_batch_item_report">Finial Batch items Report</string>
    <string name="retailersAlreadyCreated_Instruction"> This Buyer is already added . Please add new mobile number.</string>
    <string name="Please_Fill_correct_FeedValueDetails_Instruction">Please fill correct feed value details and click enter , Before generating bill.</string>
    <string name="Please_Select_Retailer_Instruction">Please select buyer before generate bill.</string>
    <string name="Please_Add_PricePerKg_Instruction">PricePerKg should be greater than zero .</string>
    <string name="Please_Add_PricePerKg_toAddItem_Instruction">Please Set price Per Kg before add item in the cart.</string>
    <string name="Please_Select_Retailer_toAddItem_Instruction">Please select buyer before add item in the cart.</string>
    <string name="Please_WaitUntil_Add_or_update_Instruction">Please wait until Add / Updation process gets finished.</string>
    <string name="scan_new_barcode_toChangeEarTag">Scan New Eartag to replace the Lost EarTag</string>
    <string name="Should_add_one_item"> You should add atleast one item to finish the batch</string>
    <string name="BatchDetailsAlreadyCreated_Instruction"> Sorry!!  Batch for this Batch ID is Already Created .</string>
    <string name="GoatEarTagAlreadyCreated_Instruction"> This Barcode is already added . Please scan new One.</string>
    <string name="GoatEarTagAlreadyCreated_SwitchTag_Instruction"> This Barcode is already added . Please scan new One .</string>
    <string name="CantEditItem_Which_isInCart_Instruction"> Please clear this item from the cart to edit it !</string>
    <string name="BatchDetailsCannotUpdated_Instruction"> Sorry!! cannot update item which is not created yet .</string>
    <string name="GoatEatTagsCannotUpdated_Instruction"> Sorry!! cannot update item which is not created yet.</string>
    <string name="GoatEatTagsCannotUpdated_PleaseChangeTOUpdate_Instruction"> Sorry!! cannot save item without changing anything .</string>
    <string name="PleaseTryAgainAfterSometime_Instruction"> Sorry!! Please Try Again After Sometime .</string>
    <string name="BatchDetailsnotReviewedYet_Instruction"> Sorry!! Please Finish Reviewing this batch before place order  .</string>
    <string name="Cancel_bill_Instruction"> Are you sure you want to cancel this order </string>
    <string name="Clear_Cart_Instruction"> Are you sure you want to clear all items from cart ? </string>
    <string name="do_you_need_fetch_dataFor_more_days_Instruction"> Do you need to load more orders ? </string>
    <string name="RetailerNotFound_Instruction"> Sorry!! There is no buyer for this mobile no . Please add buyer by using the option in settings . </string>
    <string name="RetailerNotFound_AddNewRetailer_Instruction"> Sorry!! There is no buyer for this mobile no . Do you need to add buyer now ?? . </string>
    <string name="RetailerNametFound_AddNewRetailer_Instruction"> Sorry!! There is no buyer in this name . Do you need to add buyer now ?? . </string>
    <string name="BatchDetailsnotFound_Instruction"> Sorry!! Item for this Batch No is not found .</string>
    <string name="EarTagDetailsNotFound_Instruction"> Sorry!! Item for this barcodeno is not  found .</string>
    <string name="CartItemListNotFound_Instruction"> Sorry!! There is no item added in the cart .</string>
    <string name="GoatLost_Instruction"> Sorry!! Goat item for this barcode is already marked as LOST !! .</string>
</resources>