<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TMCBackgroundLightPurpleColor"
    tools:context=".activity.View_OR_Audit_BatchItem">



    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:id="@+id/back_IconLayout"
        >
        <ImageView
            android:id="@+id/backButton_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:scaleType="center"
            android:src="@drawable/icon_backbutton"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:id="@+id/toolBarHeader_TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/view_audit_batch_item"
        tools:ignore="RelativeOverlap" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/border_line"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginStart="9dp"
        android:id="@+id/supplierLogin_Cardview"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginTop="85dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/batch_supplied_by" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/supplierName_textview"
            android:fontFamily="@font/open_sans"
            android:background="@drawable/white_edittext_with_greyborder"
            android:layout_marginTop="107dp"
            android:layout_marginStart="12dp"
            android:visibility="visible"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/batch_id" />


        <TextView
            android:id="@+id/batchid_textview"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/white_edittext_with_greyborder"
            android:fontFamily="@font/open_sans"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sampleBatchId"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="140dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/sent_date" />

        <TextView
            android:id="@+id/sentDate_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="36dp"
            android:layout_gravity="end"
            android:background="@drawable/white_edittext_with_greyborder"
            android:fontFamily="@font/open_sans"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sampleDate"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/itemCount_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="120dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/total_count"
                android:textColor="@color/TMCPrimaryPurpleColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemCount_textview"
                android:layout_width="83dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/white_edittext_with_greyborder"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/itemWeight_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/total_weight"
                android:textColor="@color/TMCPrimaryPurpleColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemWeight_textview"
                android:layout_width="83dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/white_edittext_with_greyborder"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/supplierLogin_Cardview"
        android:layout_marginTop="100dp"
        android:id="@+id/editExistingItem_layout"
        android:orientation="vertical">



        <Button
            android:id="@+id/stockBatchItem_Button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_background"
            android:elevation="60dp"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/stock_batch_item"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/view_StockedBatch_item"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/pink_button_background"
            android:elevation="40dp"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/view_stockedBatch_item"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/TMCDarkPinkTextColor"
            android:textSize="16sp" />
        <Button
            android:id="@+id/view_unStockedBatch_item"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/pink_button_background"
            android:elevation="40dp"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/view_unstockedBatch_item"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/TMCDarkPinkTextColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/closeBatch_Button"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/black_button_background"
            android:elevation="40dp"
            android:fontFamily="@font/courier_prime_bold"
            android:text="@string/review_and_finish_batch"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/batchItemDetailsFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="30dp"
        android:background="@color/TMCTransparentColor"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loadingpanelmask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/TMC_ProgressBarGrey_Color"
        android:alpha=".6"
        android:translationZ="90dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:translationZ="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadinganim_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorColor="@color/TMCPrimaryPurpleColor"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>



</RelativeLayout>