<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/TMCBackgroundLightPurpleColor"
    tools:context=".activity.UnStockedBatchEarTagItemList">


    <LinearLayout
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:id="@+id/back_IconLayout"
        >
        <ImageView
            android:id="@+id/backButton_icon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:scaleType="center"
            android:src="@drawable/icon_backbutton"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <TextView
        android:id="@+id/toolBarHeader_TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/view_unstockedBatch_item"
        tools:ignore="RelativeOverlap" />
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/border_line"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:layout_marginStart="9dp"
        android:id="@+id/supplierLogin_Cardview"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginTop="75dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/batch_supplied_by" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:id="@+id/supplierName_textview"
            android:fontFamily="@font/open_sans"
            android:background="@drawable/white_edittext_with_greyborder"
            android:layout_marginTop="107dp"
            android:layout_marginStart="15dp"
            android:visibility="visible"
            android:layout_marginEnd="2dp"
            android:gravity="center_vertical"
            android:paddingStart="6dp"
            android:paddingEnd="7dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/batch_id" />


        <TextView
            android:id="@+id/batchid_textview"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/white_edittext_with_greyborder"
            android:fontFamily="@font/open_sans"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sampleBatchId"
            android:textColor="@color/black"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_semibold"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="140dp"
            android:textColor="@color/TMCPrimaryPurpleColor"
            android:textSize="14sp"
            android:text="@string/sent_date" />

        <TextView
            android:id="@+id/sentDate_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="36dp"
            android:layout_gravity="end"
            android:background="@drawable/white_edittext_with_greyborder"
            android:fontFamily="@font/open_sans"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:text="@string/sampleDate"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/itemCount_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="100dp"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="5dp">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="5dp"
                android:text="@string/total_count"
                android:textColor="@color/TMCPrimaryPurpleColor"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/itemCount_textview"
                android:layout_width="63dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/white_edittext_with_greyborder"
                android:fontFamily="@font/open_sans"
                android:gravity="center"
                android:text="000000"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/itemunscanned_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="62.4dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"

           >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_semibold"
                android:paddingStart="8dp"
                android:paddingEnd="1dp"
                android:gravity="center"
                android:text="@string/total_unscanned_item"
                android:textColor="@color/TMCPrimaryPurpleColor"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/itemunscannedCount_textview"
                android:layout_width="63dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@drawable/white_edittext_with_greyborder"
                android:fontFamily="@font/open_sans"
                android:gravity="center"

                android:text="0"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <TextView
        android:layout_width="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/textlabel"
        android:layout_below="@+id/supplierLogin_Cardview"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="@color/TMCPrimaryPurpleColor"
        android:text="@string/unscanned_stocks_instruction" />

    <ListView
        android:id="@+id/earTagItems_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="10dp"
        android:scrollbars="none"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textlabel"

        />
    <LinearLayout
        android:id="@+id/loadingpanelmask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/TMC_ProgressBarGrey_Color"
        android:alpha=".6"
        android:translationZ="90dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:translationZ="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/loadinganim_layout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_gravity="center"
            app:indicatorColor="@color/TMCPrimaryPurpleColor"
            app:indicatorName="BallPulseIndicator" />

    </LinearLayout>


</RelativeLayout>